# ncs-production-insights

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md  pyproject.toml
.claude/: settings.json
.claude/agents/: architect.md  developer.md  test-author.md  validator.md
.claude/hooks/: README.md  role-guard.ps1
.claude/skills/phase-spec/: SKILL.md
.claude/skills/phase-tasks/: SKILL.md
.github/: CODEOWNERS
.github/workflows/: ci.yml
frontend/: .env.example  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/src/: App.tsx  config.test.ts  config.ts  index.css  main.tsx  smoke.test.ts  smoke.ts  vite-env.d.ts
frontend/src/api/: contracts.conformance.test.ts  contracts.ts  fixtures.ts  httpClient.test.ts  httpClient.ts  mockClient.test.ts  mockClient.ts  openapi.json  schema.gen.ts  selectClient.test.ts  selectClient.ts
frontend/src/components/: FieldDetailPanel.test.tsx  FieldDetailPanel.tsx  FieldMap.test.tsx  FieldMap.tsx  ForecastBadge.test.tsx  ForecastBadge.tsx  NoForecastNotice.test.tsx  NoForecastNotice.tsx  ProductionForecastChart.tsx
frontend/src/hooks/: useFieldData.test.tsx  useFieldData.ts
frontend/src/lib/: forecastSeries.test.ts  forecastSeries.ts  productionSeries.test.ts  productionSeries.ts
frontend/test/: setup.ts
frontend/test/acceptance/: badge.test.tsx  chart.test.tsx  client.test.tsx  coverage_setup.test.ts  map.test.tsx  no_forecast.test.tsx
frontend/test/acceptance/harness/: fixtures.ts  mockClient.ts  viewMocks.tsx
scripts/: seed_demo.py  start-local.ps1
specs/: roadmap.md
specs/001-ingestion/: contracts.md  plan.md  spec.md  tasks.md
specs/002-analytics/: contracts.md  plan.md  spec.md  tasks.md
specs/003-api/: contracts.md  plan.md  spec.md  tasks.md
specs/004-frontend/: contracts.md  plan.md  spec.md  tasks.md
specs/constitution/: mission.md  principles.md  tech-standards.md
src/: README.md
src/ncs/: __init__.py  config.py  contracts.py  fetch.py  link.py  normalize.py  persist.py  pipeline.py
src/ncs/api/: __init__.py  app.py  deps.py  errors.py  geojson.py  responses.py  seed.py  settings.py  store.py
src/ncs/api/routes/: __init__.py  fields.py  forecast.py  geojson.py  production.py
src/ncs/forecast/: __init__.py  backtest.py  contracts.py  forecaster.py  persist.py  run.py  series.py
src/ncs/forecast/methods/: __init__.py  arps.py  stats.py
tests/: README.md
tests/acceptance/: conftest.py  conftest_api.py  forecast_histories.py  test_api_fields.py  test_api_forecast.py  test_api_geojson.py  test_api_meta.py  test_api_production.py  test_backtest.py  test_eligibility.py  test_forecast.py  test_forecast_persistence.py  test_link.py  test_normalization.py  test_persistence.py  test_report.py  test_sourcing.py
tests/acceptance/fixtures/sodir/: README.md  field_fallback.csv  field_primary.json  production_fallback.csv
tests/unit/: test_apiunit_app.py  test_apiunit_deps.py  test_apiunit_errors.py  test_apiunit_geojson.py  test_apiunit_responses.py  test_apiunit_seed.py  test_apiunit_settings.py  test_apiunit_store.py  test_contracts.py  test_fetch.py  test_forecast_backtest.py  test_forecast_contracts.py  test_forecast_edge_branches.py  test_forecast_methods.py  test_forecast_persist.py  test_forecast_run.py  test_forecast_series.py  test_forecaster.py  test_link_reconcile.py  test_normalize.py  test_persist.py  test_pipeline.py  test_smoke.py
