[project]
name = "ncs-production-insights"
version = "0.1.0"
description = "NCS Production Insights — SODIR ingestion, decline forecasting, and dashboard, built spec-first from open data."
readme = "README.md"
requires-python = ">=3.12"
# Runtime deps scoped to phase 001 (ingestion) — exactly the libraries named in
# specs/001-ingestion/plan.md §"Library choices" + the constitution's tech-standards.
# Downstream stacks (FastAPI in 003, frontend tooling in 004) are intentionally NOT here.
dependencies = [
    "pydantic>=2",   # frozen typed contract (Pydantic v2)            — contracts.md
    "duckdb",        # single embedded store + read_csv_auto bulk path — plan.md §Persistence
    "httpx",         # sync HTTP transport (timeouts/retries)          — plan.md §Sourcing
    "polars",        # light tabular reshaping/validation before Pydantic
    "shapely",       # WKT polygon/multipolygon validity check (R7)
    # pytz is a DuckDB *runtime* requirement, not imported by any ncs source: DuckDB needs it to
    # materialize a TIMESTAMPTZ column into a tz-aware datetime on read. Transitive to duckdb, pinned
    # explicitly here because the store uses TIMESTAMPTZ for ingestion_report.retrieved_at (R9).
    "pytz>=2026.2",
]

[dependency-groups]
# Dev-only tooling — installed by `uv sync`, excluded from the published package.
dev = [
    "pytest",
    "pytest-cov",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# src-layout: the importable package lives at src/ncs/ so `from ncs... import ...`
# works after `uv sync`. Point hatchling at it explicitly.
[tool.hatch.build.targets.wheel]
packages = ["src/ncs"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# Coverage ratchet (principle 9): baseline recorded at 001-T12 once the pipeline went green
# end-to-end. Measured total was 95%; the gate is set a few points below (92) for headroom so a
# trivial branch fluctuation doesn't red-light CI. The ratchet only ever moves UP from here.
addopts = "--cov=ncs --cov-report=term-missing --cov-fail-under=92"

[tool.coverage.run]
source = ["ncs"]
branch = true

[tool.coverage.report]
show_missing = true
# Coverage baseline (principle 9 ratchet). Recorded at 001-T12 once the fetch → normalize → link →
# persist → report pipeline went green end-to-end (the full acceptance suite + developer unit tests).
# Measured total was 95%; the gate sits a couple of points below at 92 for headroom against trivial
# branch fluctuation. This number only ever moves UP — a deliberate reduction needs a coordinator
# COVERAGE-WAIVER (tech-standards). Kept in sync with --cov-fail-under in [tool.pytest.ini_options].
fail_under = 92
