[project]
name = "ncs-production-insights"
version = "0.1.0"
description = "NCS Production Insights — SODIR ingestion, decline forecasting, and dashboard, built spec-first from open data."
readme = "README.md"
requires-python = ">=3.12"
# Runtime deps scoped to phase 001 (ingestion) — exactly the libraries named in
# specs/001-ingestion/plan.md §"Library choices" + the constitution's tech-standards.
# Downstream stacks (FastAPI in 003, frontend tooling in 004) are intentionally NOT here.
dependencies = [
    "pydantic>=2",   # frozen typed contract (Pydantic v2)            — contracts.md
    "duckdb",        # single embedded store + read_csv_auto bulk path — plan.md §Persistence
    "httpx",         # sync HTTP transport (timeouts/retries)          — plan.md §Sourcing
    "polars",        # light tabular reshaping/validation before Pydantic
    "shapely",       # WKT polygon/multipolygon validity check (R7)
    # pytz is a DuckDB *runtime* requirement, not imported by any ncs source: DuckDB needs it to
    # materialize a TIMESTAMPTZ column into a tz-aware datetime on read. Transitive to duckdb, pinned
    # explicitly here because the store uses TIMESTAMPTZ for ingestion_report.retrieved_at (R9).
    "pytz>=2026.2",
    # Phase 002 (forecasting) — exactly the libraries named in specs/002-analytics/plan.md
    # §"Libraries to add". numpy for series/MAPE math, scipy for the Arps non-linear least-squares
    # fit, statsmodels for the Holt damped-trend baseline (it pulls pandas transitively).
    "numpy>=2.4.6",
    "scipy>=1.17.1",
    "statsmodels>=0.14.6",
    # Phase 003 (read-only API) — exactly the libraries named in specs/003-api/plan.md
    # §"Libraries to add": FastAPI for the app + auto-generated OpenAPI/Swagger (R7); uvicorn the
    # ASGI server for create_app() (dev/demo). FastAPI's TestClient reuses httpx (already above), so
    # no new test dependency is introduced.
    "fastapi>=0.136.3",
    "uvicorn>=0.49.0",
]

[dependency-groups]
# Dev-only tooling — installed by `uv sync`, excluded from the published package.
dev = [
    "pytest",
    "pytest-cov",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# src-layout: the importable package lives at src/ncs/ so `from ncs... import ...`
# works after `uv sync`. Point hatchling at it explicitly.
[tool.hatch.build.targets.wheel]
packages = ["src/ncs"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# Coverage ratchet (principle 9): baseline recorded at 001-T12 (measured 95%, gate 92). Ratcheted UP
# at 002-T12 once the forecasting pipeline (series → backtest/select → forecast → persist) landed
# green over the combined 001+002 code: measured total 96.7%, so the gate moved to 94. Ratcheted UP
# again at 003 once the read-only API (store read · geojson · routes · seed) landed green over the
# combined 001+002+003 code: measured total 97.6% (every ncs.api module at 100%), so the gate moves to
# 95 — still a couple of points below for headroom against trivial branch fluctuation. Only moves UP.
addopts = "--cov=ncs --cov-report=term-missing --cov-fail-under=95"

[tool.coverage.run]
source = ["ncs"]
branch = true

[tool.coverage.report]
show_missing = true
# Coverage baseline (principle 9 ratchet). First recorded at 001-T12 (fetch → normalize → link →
# persist → report; measured 95%, gate 92). Ratcheted UP at 002-T12 once the forecasting pipeline
# (series → backtest/select → forecast → persist) went green over the combined 001+002 code: measured
# total 96.7%, gate raised to 94. Ratcheted UP again at 003 once the read-only API (store · geojson ·
# routes · seed) went green over the combined 001+002+003 code: measured total 97.6% (every ncs.api
# module at 100%), gate raised to 95 with headroom against trivial branch fluctuation. This number only
# ever moves UP — a deliberate reduction needs a coordinator COVERAGE-WAIVER (tech-standards). Kept in
# sync with --cov-fail-under in [tool.pytest.ini_options].
fail_under = 95
